IT Data Analyst & Reporting Manager CMDB & SI Tools - Nokia Careers. Senior Data Analyst - RELX Careers. Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers. The Climate Corporation Careers - Intern: Data Analyst (Summer 2020).     Data Analyst PL at EBANX .     Data Analyst at Wingify Software Pvt. Ltd. . Data Modeling Analyst - NetImpact Strategies - Career Page. Publicis Groupe Data Analyst | SmartRecruiters. Upside - Data Science Business Analyst. Data Science Analyst - Simpletire - Career Page. Rate Data Analyst job with Glatfelter Insurance Group | 6409357. bowmo - Data Analyst (CRM). Medidata Solutions Careers - Data Intelligence Analyst. Medidata Solutions Careers - Data Intelligence Analyst. ChowNow  - Data Analyst, Revenue Operations. Job @ Onedot (Schlieren): Data Analyst Intern | JOIN. Medidata Solutions Careers - Data Intelligence Analyst. Benefitfocus Careers - Data Analyst II. Job Application for Manager of Data Analysis at Summit Public Schools (SPS). Trainee Data Analyst - Lewisham Jobs Careers. Data Analyst | Current Openings. Job Application for Sr. Data Analyst at States Title. Data Analyst Real-World Evidence (m/f/d) | Fresenius Medical Care Deutschland GmbH | Job. Shore Consulting Senior Business Data Analyst (Health Sector Experience/QA experience) | SmartRecruiters. Job Application for Data Analyst at MealPal. Clinical Data Analyst - Adventist Health Careers. Senior Survey Statistician - Fors Marsh Group - Career Page. Falcon.io - R&D Data Analyst. Job Application for Network Operations Center (NOC) Customer Data Analyst at Bandwidth. Desmos - Data Analyst. Job Application for Data Analyst  at eSolutions, Inc.. Zeta Global Careers - Data Analyst - Reporting and Visualization. Umdasch Group Senior Data Analyst (m/w/d) | SmartRecruiters. Bosch Group Data Analyst | SmartRecruiters. Job Application for Data Analyst at Media Molecule. Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page. Ironclad Technology Services - Ora

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,22 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/it-data-analyst-reporting-manager-cmdb-si-tools-36966'>IT Data Analyst & Reporting Manager CMDB & SI Tools - Nokia Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://4re.referrals.selectminds.com/jobs/senior-data-analyst-27554'>Senior Data Analyst - RELX Careers</a></h5> 
+<p><span class="badge badge-light">United States  Portland, OR</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-lexisnexis-risk-solutions-cardiff-27560'>Data Analyst - LexisNexis Risk Solutions  - Cardiff - RELX Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
+<p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://ebanx.recruiterbox.com/jobs/fk03oji/'>
     Data Analyst PL at EBANX
 </a></h5> 
@@ -175,7 +191,7 @@
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/desmos/66ffa184-9a07-40ca-91d3-346b1e648dbd'>Desmos - Data Analyst</a></h5> 
 <p><span class="badge badge-light">United States San Francisco</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -207,7 +223,7 @@
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KABS/743999697991212-analyste-verification-de-donnees-data-review-analyst'>KABS Analyste V?rification de donn?es - Data Review Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KABS/743999697991212-analyste-verification-de-donnees-data-review-analyst'>KABS Analyste V?rification de donn?es - Data Review Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -231,11 +247,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://benefits-data-trust.breezy.hr/p/5bba8f9ac853-senior-data-analyst'>Senior Data Analyst at Benefits Data Trust</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://benefits-data-trust.breezy.hr/p/5bba8f9ac853-senior-data-analyst'>Senior Data Analyst at Benefits Data Trust</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -243,7 +259,7 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medallia/7b36f37c-5f4d-4c39-a787-182ff4b1f5f9'>Medallia - Senior Data Analyst, People Analytics</a></h5> 
+<h5><a href='https://jobs.lever.co/medallia/7b36f37c-5f4d-4c39-a787-182ff4b1f5f9'>Medallia - Senior Data Analyst, People Analytics</a></h5> 
 <p><span class="badge badge-light">Pleasanton, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -255,7 +271,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://odum.unc.edu/2019/10/statsconsultant-job/'>Part-time Job Opening: Statistical Consultant?(Spring 2020) - The Odum Institute</a></h5> 
+<h5><a href='https://odum.unc.edu/2019/10/statsconsultant-job/'>Part-time Job Opening: Statistical Consultant?(Spring 2020) - The Odum Institute</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -271,7 +287,7 @@
 <p><span class="badge badge-light">New York, NY New York, NY</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
+<h5><a href='https://www.hbs.edu/recruiting/data/Pages/default.aspx?sf111482827=1'>
 	MBA Student Data &amp; Statistics - Recruiting - Harvard Business School
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -415,7 +431,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/madkudu/53b13e5e-90b1-4105-8394-95079c9a1d27'>MadKudu - Business and Data Analyst ??</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/madkudu/53b13e5e-90b1-4105-8394-95079c9a1d27'>MadKudu - Business and Data Analyst ??</a></h5> 
 <p><span class="badge badge-light">Paris Mountain View</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -459,7 +475,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
+<h5><a href='https://boards.greenhouse.io/questbridge/jobs/4435765002'>Job Application for Data Analyst, Data Science & Analytics at QuestBridge</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -470,23 +486,6 @@
 <h5><a href='https://statmodeling.stat.columbia.edu/2019/10/25/givewell-is-hiring-wants-someone-to-help-figure-out-how-to-give-well-bayesian-methods-may-be-relevant-here/'>Givewell is hiring; wants someone to help figure out how to give well; Bayesian methods may be relevant here ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/themergermarketgroup/job/oTypbfwL'>Acuris Careers - Part-Time Market Data Analyst</a></h5> 
-<p><span class="badge badge-light">London London</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Edenred/743999698137875-data-analyst-h-f'>Edenred France Data Analyst H/F | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">France France  France</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/jr31mcp4y7cz98ip85tumxbeny'>Data Analyst | Strategic Employment</a></h5> 
-<p><span class="badge badge-light">Irvine, CA</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://ausdta.recruiterbox.com/jobs/fk037p3'>Data Analyst - APS6 at Digital Transformation Agency</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>1 day ago ... We are looking for a talented Data Analyst to join gov.au Observatory, to help us 
-achieve our mission to quantify user interactions with government services.</p>
 <hr/>
 
 
