--- a/web-developer.html
+++ b/web-developer.html
@@ -98,7 +98,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.housing-technology.com/job/477/front-end-web-applications-developer/'>Front End Web/Applications Developer | Housing Technology Recruitment - IT Jobs in Housing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.housing-technology.com/job/477/front-end-web-applications-developer/'>Front End Web/Applications Developer | Housing Technology Recruitment - IT Jobs in Housing</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -177,7 +177,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://riafinancial.referrals.selectminds.com/jobs/web-developer-1647'>Web Developer - Ria Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://riafinancial.referrals.selectminds.com/jobs/web-developer-1647'>Web Developer - Ria Careers</a></h5> 
 <p><span class="badge badge-light">United States United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -193,7 +193,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584885'>Stellenangebot: Web Developer PHP (m/w/d) (T?bingen) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584885'>Stellenangebot: Web Developer PHP (m/w/d) (T?bingen) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -413,7 +413,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ogvobfw4'>WebMD Careers - Sr Director, Content Development</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ogvobfw4'>WebMD Careers - Sr Director, Content Development</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, Georgia  New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
